Continue to make correction

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <meta name="twitter:image" content="/og-image.jpg" />
 
     <link rel="canonical" href="https://kamilath-osseni-portfolio.com" />
+    <link rel="icon" type="image/png" href="https://cdn-icons-png.flaticon.com/512/3135/3135715.png" sizes="32x32" />
   </head>
 
   <body>
